MODIFY：修改首页设计

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,31 +20,31 @@
         <div class="layui-side-scroll" style="width: 100%;padding: 15px;padding-bottom: 25px">
             <div class="layui-col-xs-offset4 layui-col-xs4" style="margin-top: 170px;">
                 <!-- logo -->
-                <div>
+                <div style="margin-left: -20px;margin-bottom: 30px">
                     <img src="/images/logo_big.png">
                 </div>
 
                 <div>
                     <!-- 用户编号 -->
-                    <div class="layui-col-xs12" style="margin-left: 10px;margin-top: 10px;">
+                    <div class="layui-col-xs12">
                         <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">用户编号</label>
-                        <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
+                        <div class=" layui-col-xs9 note_title_outer" style="margin-top: -4px;">
                             <input id="input_id" type="text" maxlength="15" class=" new_nb_item_word"
-                                   placeholder="（最长15个字）" style="font-size: 18px">
+                                   placeholder="                                        （最长15个字）" style="font-size: 18px">
                         </div>
                     </div>
                     <!-- 密码 -->
-                    <div class="layui-col-xs12" style="margin-left: 10px;">
+                    <div class="layui-col-xs12">
                         <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">密码</label>
-                        <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
+                        <div class=" layui-col-xs9 note_title_outer" style="margin-top: -4px;">
                             <input id="input_pwd" type="password" maxlength="20" class=" new_nb_item_word"
-                                   placeholder="（最长20个字）" style="font-size: 18px">
+                                   placeholder="                                        （最长20个字）" style="font-size: 18px">
                         </div>
                     </div>
                     <hr class="layui-bg-gray" style="margin-left: 10px;margin-right: 10px;">
 
                     <!-- 登录注册按钮 -->
-                    <div class="layui-col-xs12" style="margin-left: 10px;">
+                    <div class="layui-col-xs12">
                         <button class="log_in layui-col-xs-offset4 layui-btn layui-btn-md">
                             <!--<i class="layui-icon">&#xe641;</i>-->
                             <p>登录</p>
