--- a/views/admin_header.ejs
+++ b/views/admin_header.ejs
@@ -1,5 +1,5 @@
 <div class="layui-header">
-    <div class="layui-logo"><img src="/images/logo.png" class="layui-nav-img"></div>
+    <div class="layui-logo"><img src="/images/logo.png" style="width: 180px;height: 55px;margin-left: 25px;margin-top: -12px"></div>
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item"><a href="/admin">查看用户</a></li>
     </ul>
