--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -60,7 +60,7 @@
             <% if(has_nb === true) { %>
             <div id="note_nb" class="note_item_word"><%= default_nb[0].nb_name %></div>
             <% } else { %>
-            <div id="note_nb" class="note_item_word" style="color: #787b75">【未创建过笔记本】</div>
+            <div id="note_nb" class="note_item_word" style="color: #787b75">(未创建过笔记本)</div>
             <% } %>
             <% } %>
         </div>
