--- a/views/admin_index.ejs
+++ b/views/admin_index.ejs
@@ -153,7 +153,7 @@
               var pwd2 = $('#user_new_pwd_2').val();
 
               if (pwd1 !== pwd2) {
-                alert("两次密码输入不一致");
+                layer.alert("两次密码输入不一致，请检查后重试！", {icon: 2, time: 1500});
               } else {
                 // 修改用户密码
                 var data = {
@@ -168,8 +168,8 @@
                   data: data,
 
                   success: function (result) {
-                    alert(result);
                     layer.close(index);
+                    layer.alert("修改成功！", {icon: 1, time: 1500});
                   },
                   error: function (result) {
                     alert("错误" + result);
@@ -206,7 +206,10 @@
       data: data,
 
       success: function (result) {
-        alert(result);
+        layui.define(['layer'], function (exports) {
+          var layer = layui.layer;
+          layer.alert("删除成功！", {icon: 1, time: 1500});
+        });
 
         // 动态修改用户界面
         // 得到第一个元素，比较两 note_id
