--- a/views/community.ejs
+++ b/views/community.ejs
@@ -102,7 +102,8 @@
                             <i class="layui-icon">&#xe612;</i>
                         </label>
                         <div class="layui-col-xs10 note_title_outer">
-                            <div class="share_note_author note_item_word" style="width: 270px"><%= now_note.user_id %></div>
+                            <div class="share_note_author note_item_word"
+                                 style="width: 270px"><%= now_note.user_id %></div>
                         </div>
                     </div>
 
@@ -168,7 +169,9 @@
   var all_share_notes_backup = $('.share_note_line');
 
   function all_user_listeners() {
-    // 左侧点击关注／取消关注
+    /**
+     * 左侧点击关注／取消关注
+     */
     $('.follow_btn').click(function (e) {
 
       // 点击之后的状态
@@ -242,39 +245,39 @@
       // 重新渲染监听
       all_user_listeners();
     });
+
+    /**
+     * 查看分享的笔记详情
+     */
+    $('.check_btn').click(function () {
+      var this_share_note = $(this).parent().parent();
+      var share_note_title = this_share_note.find('.share_note_title').html().trim();
+      var share_note_author = this_share_note.find('.share_note_author').html().trim();
+      var share_note_tag = this_share_note.find('.share_note_tag').html().trim();
+      var share_note_file = this_share_note.find('.share_note_file').html().trim();
+
+      var myWindow = window.open("/lookup?readonly=true&title=" + share_note_title + "&author=" + share_note_author
+        + "&tag=" + share_note_tag + "&content=" + share_note_file);
+      myWindow.focus();
+    });
+
+    /**
+     * TODO 为分享的笔记点赞
+     */
+    $('.upvoke_btn').click(function () {
+      var cur_upvote_num = $(this).find('.btn_group_tip').html();
+      alert(cur_upvote_num)
+
+      var data;
+      if ($(this).hasClass('.has_upvoted')) {
+        data = {
+          note_id: a,
+          now_upvote_num: 0
+        };
+      }
+
+    });
   }
-
-  /**
-   * 查看分享的笔记详情
-   */
-  $('.check_btn').click(function () {
-    var this_share_note = $(this).parent().parent();
-    var share_note_title = this_share_note.find('.share_note_title').html().trim();
-    var share_note_author = this_share_note.find('.share_note_author').html().trim();
-    var share_note_tag = this_share_note.find('.share_note_tag').html().trim();
-    var share_note_file = this_share_note.find('.share_note_file').html().trim();
-
-    var myWindow = window.open("/lookup?readonly=true&title=" + share_note_title + "&author=" + share_note_author
-      + "&tag=" + share_note_tag + "&content=" + share_note_file);
-    myWindow.focus();
-  });
-
-  /**
-   * TODO 为分享的笔记点赞
-   */
-  $('.upvoke_btn').click(function () {
-    var cur_upvote_num = $(this).find('.btn_group_tip').html();
-    alert(cur_upvote_num)
-
-    var data;
-    if ($(this).hasClass('.has_upvoted')) {
-      data = {
-        note_id: a,
-        now_upvote_num: 0
-      };
-    }
-
-  });
 
   /**
    * 用户模糊搜索
