--- a/views/tags.ejs
+++ b/views/tags.ejs
@@ -101,7 +101,7 @@
       data: data,
 
       success: function (result) {
-        alert(result);
+        // alert(result);
 
         // 动态修改用户界面
         // 得到第一个元素，比较两 note_id
