ADD：点赞后端逻辑

--- a/views/community.ejs
+++ b/views/community.ejs
@@ -81,7 +81,7 @@
             <% if (i != 0) { %>
             <div style="height: 5px;"></div>
             <% } %>
-            <% var now_note = share_notes_data[i]; %>
+            <% var now_note = share_notes_data[i].note; %>
 
             <div class="share_note_line">
                 <div class="share_note_content">
